--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "native-base": "^3.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-redux": "^7.1.24",
+    "eslint-config-react-native-wcandillon": "^3.8.0",
     "typescript": "~4.3.5"
   },
   "private": true
